# pavex-playground

./: Cargo.toml  README.md
demo/: Cargo.toml
demo/src/: blueprint.rs  lib.rs  lifecycle.rs  user_agent.rs
demo/src/repository/: book.rs  mod.rs
demo/src/routes/: books.rs  greet.rs  mod.rs  status.rs
demo_server/: Cargo.toml
demo_server/src/: configuration.rs
demo_server/tests/integration/: helpers.rs
demo_server_sdk/: Cargo.toml  blueprint.ron
demo_server_sdk/src/: lib.rs
