[package]
name = "demo"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/bin/bp.rs"
name = "bp"

[dependencies]
cargo_px_env = "0.1"
pavex = { version = "0.1.16" }
pavex_cli_client = { version = "0.1.16" }
tracing = "0.1"
anyhow = "1"
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls" ] }

# Configuration
serde = { version = "1", features = ["derive"] }
serde-aux = "4"
