[package]
name = "demo_server_sdk"
version = "0.1.0"
edition = "2021"

[package.metadata.px.generate]
generator_type = "cargo_workspace_binary"
generator_name = "bp"

[lints]
clippy = { all = "allow" }

[dependencies]
demo = { version = "0.1.0", path = "../demo", package = "demo" }
http = { version = "1.0.0", package = "http" }
hyper = { version = "1.1.0", package = "hyper" }
pavex = { version = "0.1.16", package = "pavex" }
pavex_matchit = { version = "0.7.4", package = "pavex_matchit" }
thiserror = { version = "1.0.56", package = "thiserror" }
